2007-08-24 Heath Harrelson <heath.harrelson@gmail.com>
	* readme.txt: Add version history.

2007-08-23 Heath Harrelson <heath.harrelson@gmail.com>
	Tag version 1.0.4

2007-08-22 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo_archives_widget.php: Use the WordPress install URL rather
		than the blog URL for the JS file to accommodate users who
		don't install WordPress into the root of their site.

2007-08-18 Heath Harrelson <heath.harrelson@gmail.com>
	* readme.txt: Add note about breakage previous to 1.0.3

2007-08-18 Heath Harrelson <heath.harrelson@gmail.com>
	* readme.txt: Bump current rev, fix typo in name of zip file.
	* flexo_archives_widget: Determine the name of the plugin's 
		directory programmatically, rather than hard-coding it.
		Bump revision.

2007-08-14 Heath Harrelson <heath.harrelson@gmail.com>
	* readme.txt: Update installation instructions and bump current rev.
	* flexo_archives_widget.php: Switch "Flex-o" to "Flexo."

2007-08-12 Heath Harrelson <heath.harrelson@gmail.com>
	Update readme.txt a smidge.

	* readme.txt: Bump highest tested field to 2.2.2.  Also rework the
		description, because I don't think the default archives
		widget is from Automattic.

2007-07-27 Heath Harrelson <heath.harrelson@gmail.com>
	Add a "Click to Expand" hint to the titles of the expandable links.
	This necessitated rearranging the logic a bit, moving the flexo-link
	class from the <li> to the <a> tags.

	* flexo.js: Add a loop to init() to append "Click to Expand" to the title
		of each link; change the logic of clickListener to acommodate the 
		fact that class="flexo-list" is now on anchor.
	* flexo_archives_widget.php: Move flexo-list class to the link.

2007-07-25 Heath Harrelson <heath.harrelson@gmail.com>

	First version that works in IE, Firefox, Safari.  Files added:

	* LICENSE.txt: GPLv2 text
	* flexo.js: JavaScript code needed to expand / contract archives
	* flexo_archives_widget.php: Server-side code needed to query the WordPress